# ECHO

./: .gitignore  LICENSE  README.md  README_EN.md  Taylor Swift、Brendon Urie - ME! (Feat. Brendon Urie Of Panic! At The Disco).ttml  electron.vite.config.ts  flake.nix  package-lock.json  package.json  package.nix  shell.nix  tsconfig.json
.codex/environments/: environment.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: -cn--功能请求.md  -cn--错误报告-bug报告-.md  -cn-功能请求.md  -cn-错误报告-bug报告-.md  -en--bug-report.md  -en--feature-request.md  -en-bug-report.md  -en-feature-request.md  重要-提issue前先读readme和echo文档.md
data/: echo-settings.json
docs/: CHANGELOG_2026-05-31_2026-06-01.md  CHANGELOG_2026-06-01_2026-06-02.md  ECHO_NEXT_AUDIO_CORE.md  ECHO_NEXT_EQ.md  ECHO_NEXT_LIBRARY_CORE.md  ECHO_NEXT_LIBRARY_SMOKE_TEST.md  ECHO_NEXT_LINUX_BUILD.md  ECHO_NEXT_NETWORK_METADATA.md  ECHO_NEXT_PLUGINS.md  ECHO_NEXT_ROADMAP.md  ECHO_NEXT_RULES.md  USER_GUIDE.md  echo-next-docs-full.md  theme-contract.md
docs/plugin-sdk/: ForAIReadme.md  echo-plugin.d.ts
examples/: echo.downloads-unlock.echo  osu.downloader.echo
native/audio-engine/: DspChain.cpp  DspChain.h  DspHeadroomProcessor.cpp  DspHeadroomProcessor.h  EqMessageProtocol.cpp  EqMessageProtocol.h  EqPresetStore.cpp  EqTypes.h
native/audio-host/: CMakeLists.txt
native/audio-host/src/: asio_host.cpp  asio_host.h  main.cpp  wasapi_exclusive.cpp  wasapi_exclusive.h  wasapi_shared.cpp  wasapi_shared.h
native/audio-host/tests/: audio_engine_tests.cpp
scripts/: benchmark-library.mjs  benchmark-library.test.mjs  build-airplay-raop.mjs  build-audio-host.mjs  echo-private-overlay.mjs  echo-pro-decrypt-watermark.mjs  echo-pro-generate-plugin.mjs  ensure-native-abi.mjs  smoke-audio-host.mjs  smoke-dsd-direct.mjs  stress-audio-host.mjs  theme-color-baseline.json
src/main/: index.ts
src/main/accounts/: AccountLoginWindow.ts  AccountService.ts  SpotifyAuthService.test.ts  SpotifyAuthService.ts
src/main/app/: appSettings.test.ts  appSettings.ts  autoUpdater.ts  backgroundPlaybackShortcuts.test.ts  backgroundPlaybackShortcuts.ts  cacheInventory.ts  createMainWindow.test.ts  createMainWindow.ts  dataPackage.ts  dataProtection.test.ts  dataProtection.ts  desktopLyricsWindow.test.ts  desktopLyricsWindow.ts  devApiServer.ts  entitlementDiagnostics.test.ts  entitlementDiagnostics.ts  lifecycle.ts  localFileOpen.test.ts  localFileOpen.ts  miniPlayerWindow.ts  packageIntegrity.test.ts  packageIntegrity.ts  taskbarPlaybackIntegration.test.ts  taskbarPlaybackIntegration.ts  touchKeyboard.test.ts  touchKeyboard.ts  tray.ts  windowBackgroundMaterial.ts  xdgPaths.ts
src/main/audio/: AudioAuthenticityAnalyzer.test.ts  AudioAuthenticityAnalyzer.ts  AudioCore.test.ts  AudioLevelMeter.test.ts  AudioLevelMeter.ts  AudioSession.ts  CueSheet.test.ts  CueSheet.ts  DecoderPipeline.ts  DsdDopPipeline.ts  DsdProbe.test.ts  DsdProbe.ts  EqBridge.test.ts  EqBridge.ts  JuceDecodePipeline.ts  NativeOutputBridge.ts  README.md  audioTypes.ts
src/main/connect/: AirPlayMdnsAdvertiser.test.ts  AirPlayMdnsAdvertiser.ts  AirPlayReceiverSpikeService.test.ts  AirPlayReceiverSpikeService.ts  EchoLinkService.test.ts  EchoLinkService.ts
src/main/database/: LibraryDatabaseManager.ts  createDatabase.test.ts  createDatabase.ts  migrations.ts  schema.ts
src/main/diagnostics/: CrashReportService.test.ts  CrashReportService.ts  DevConsoleService.ts  LibraryScanPerfDiagnostics.ts  MemoryPressureMonitor.ts  PlaybackPerformanceDiagnostics.test.ts  PlaybackPerformanceDiagnostics.ts  crashHandlers.ts
src/main/downloads/: DownloadService.test.ts  DownloadService.ts
src/main/ipc/: accountIpc.ts  audioIpc.test.ts  audioIpc.ts  connectIpc.test.ts  connectIpc.ts  desktopLyricsIpc.test.ts  desktopLyricsIpc.ts  diagnosticsIpc.ts  downloadsIpc.test.ts  downloadsIpc.ts  libraryIpc.test.ts  libraryIpc.ts  lyricsIpc.ts  mvIpc.ts  playbackIpc.test.ts  playbackIpc.ts  pluginIpc.test.ts  pluginIpc.ts  registerIpc.test.ts  registerIpc.ts  remoteSourcesIpc.ts  streamingIpc.ts
src/main/lyrics/: ChinaLyricsProviders.test.ts  LocalLyricsProvider.test.ts  LocalLyricsProvider.ts  LrclibProvider.test.ts  LrclibProvider.ts  LyricsMatchEngine.test.ts  LyricsMatchEngine.ts  LyricsProvider.ts  LyricsService.test.ts  LyricsService.ts  NeteaseLyricsProvider.ts  QQMusicLyricsProvider.ts  UtatenKanaProvider.test.ts  UtatenKanaProvider.ts  lyricsParser.test.ts  lyricsParser.ts  lyricsQueryBuilder.ts  lyricsScoring.test.ts  lyricsScoring.ts
src/main/mv/: MvService.test.ts  MvService.ts  OnlineMvProviders.test.ts  OnlineMvProviders.ts
src/main/plugins/: ConnectDonatorUnlockService.ts  DownloadFeatureUnlockService.test.ts  DownloadFeatureUnlockService.ts  EchoProLicensePlugin.ts  MachineIdentity.ts  PluginManifest.test.ts  PluginManifest.ts  PluginService.test.ts  PluginService.ts  privateEntitlements.ts  privateOverlayLoader.ts  privateOverlayRuntime.ts
src/main/protocol/: coverProtocol.test.ts  coverProtocol.ts
src/main/streaming/: StreamingCacheStore.test.ts  StreamingCacheStore.ts  StreamingProvider.ts  StreamingProviderRegistry.ts  StreamingService.test.ts  StreamingService.ts
src/preload/: apiTypes.ts  index.test.ts  index.ts
src/renderer/: main.tsx
src/renderer/app/: AppLayout.test.tsx  AppLayout.tsx  AppProviders.tsx  routes.tsx
src/renderer/desktop-lyrics/: DesktopLyricsApp.test.tsx  DesktopLyricsApp.tsx
src/renderer/diagnostics/: lyricsConsole.ts  performanceStallMonitor.ts
src/renderer/hooks/: useAnimatedBackNavigation.ts  useProgressiveRenderLimit.test.tsx  useProgressiveRenderLimit.ts
src/renderer/i18n/: locales.ts
src/renderer/mini-player/: MiniPlayerApp.tsx
src/renderer/pages/: AlbumsPage.test.tsx  AlbumsPage.tsx  ArtistsPage.test.tsx  ArtistsPage.tsx  ConnectPage.test.tsx  ConnectPage.tsx  DownloadsPage.test.tsx  DownloadsPage.tsx  DspPage.tsx  FoldersPage.test.tsx  FoldersPage.tsx  HistoryPage.test.tsx  HistoryPage.tsx  HomePage.test.tsx  HomePage.tsx  InboxPage.test.tsx  InboxPage.tsx  LikedPage.tsx  LyricsPage.tsx  (+13 more)
src/types/: node-libraop.d.ts  node-sqlite.d.ts
(+163 files in other folders)
